Changes in OBO-Edit2b56:

Bug Fixes:
[ 2642262 ] can't delete term dbxref b55


Features:
[ 2065087 ] flag obsolete in replace/consider tag
Any mention of a term to be obsoleted in a consider or replaced_by tag is now flagged.

TO DO:
Documentation:
- user.dict usage and backup info

Troubleshooting- add note about:
https://sourceforge.net/tracker2/index.php?func=detail&aid=2683791&group_id=36855&atid=418257





