@@ -1,8 +1,15 @@
 Changes in OBO-Edit2b56:
 
 Bug Fixes:
-[ 2642262 ] can't delete term dbxref b55
-
+[ geneontology-Bugs-2642262 ] can't delete term dbxref b55
+[ geneontology-Bugs-2692113 ] update components to reflect name changes
+[ geneontology-Bugs-2513220 ] b52 - load terms fails with no error message
+Load ontology window/panel displays error message.
+[ geneontology-Bugs-2588958 ] Search has hits but no hitlist (b52)
+[ geneontology-Bugs-2611032]OE exceptionally slow with new regulates links
+Pending bugs:
+1. user dictionary stuff
+2. incremental reasoning on/off switch
 
 Features:
 [ 2065087 ] flag obsolete in replace/consider tag
